--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 scroll-smooth;
   }
   body {
     @apply bg-background text-foreground font-space-grotesk;
@@ -123,7 +123,7 @@
     @apply transition-all duration-300 ease-in-out;
   }
   .menu-item-active {
-    @apply bg-white dark:bg-cyan-500/40 border border-slate-700 dark:border-cyan-300;
+    @apply bg-white dark:bg-cyan-500/40 border border-slate-700 dark:border-cyan-300 dark:text-cyan-300;
   }
   .menu-item-inactive {
     @apply hover:bg-white dark:hover:bg-cyan-500/40 hover:border hover:border-slate-700 dark:hover:border-cyan-300 text-slate-700 dark:text-white dark:hover:text-cyan-300;
